@@ -1,5 +1,7 @@
-rrarefy <-
-function(x, sample)
+### Random rarefied subsample: sample without replacement
+
+`rrarefy` <-
+    function(x, sample)
 {
     if (length(sample) > 1 && length(sample) != nrow(x))
         stop("length of 'sample' and number of rows of 'x' do not match")
@@ -14,4 +16,23 @@ function(x, sample)
         x[i,ind] <- row
     }
     x
+}
+
+### Probabilities that species occur in a rarefied 'sample'
+
+`drarefy` <-
+    function(x, sample)
+{
+    if (length(sample) > 1)
+        stop(gettextf("only scalar 'sample' is accepted"))
+    x <- drop(as.matrix(x))
+    dfun <- function(x, sample) {
+        J <- sum(x)
+        sample <- min(sample, J)
+        1 - exp(lchoose(J - x, sample) - lchoose(J, sample))
+    }
+    if (length(dim(x) > 1))
+        t(apply(x, 1, dfun, sample = sample))
+    else
+        dfun(x, sample)
 }
